force-app/main/default/objects/Financing_Status_Event__e/Financing_Status_Event__e.object-meta.xml
<CustomObject>
    <label>Financing Status Event</label>
    <pluralLabel>Financing Status Events</pluralLabel>
    <description>Published whenever a financing application status changes. Subscribers: Flows, LWC (empApi), MuleSoft.</description>
</CustomObject>