force-app/main/default/objects/Financing_Status_Event__e/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <type>Text</type>
    <length>50</length>
</CustomField>